# intelligent_robot_vision

./: CMakeLists.txt  README.md  package.xml
config/: tilt_config.yaml
include/detection/: detection_node.hpp
include/pan_tilt/: pan_tilt_node.hpp
include/refiner/: refiner_node.hpp
include/utils/: utils.hpp
launch/: intelligent_robot_vision.launch.py
model/: best.xml  yolo11n.xml
msg/: BoundingBox.msg  Detection.msg
resources/param/: PARAM2.txt
src/detection/: detection_node.cpp
src/pan_tilt/: pan_tilt_node.cpp
src/refiner/: refiner_node.cpp
